# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pyCAX
description = Python client for CAX
author = Eli Holmes and Mari Williams
author_email = eli.holmes@noaa.gov
url = https://github.com/nwfsc-math-bio/pyCAX
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license-file = LICENSE
project_urls =
    Documentation = https://nwfsc-math-bio.github.io/pyCAX
    Bug Tracker = https://github.com/nwfsc-math-bio/pyCAX
    Source Code = https://github.com/nwfsc-math-bio/pyCAX
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
install_requires =
    requests>2.7
    pandas
python_requires = >=3.7
packages = find:
